--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /JavaFXApplicationHbox/nbproject/private/
 /JavaFXApplicationHbox/build/
 /JavaFXApplicationHbox/dist/
+/JFXLayouts/nbproject/private/
+/JFXLayouts/build/
